# AI-Employee-Hackathon-0

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
bronze/: .env.example  orchestrator.py  pyproject.toml
bronze/src/: main.py
bronze/src/core/: config.py  vault_manager.py
bronze/src/watchers/: base_watcher.py  filesystem_watcher.py
bronze/vault/: Company_Handbook.md  Dashboard.md
gold/: .env.example  .gitignore  .gmail_processed_ids.json  .linkedin_pending_posts.json  .linkedin_processed_ids.json  docker-compose.yml  linkedIn_orchestrator.py  orchestrator.py  pyproject.toml
gold/docker/: odoo.conf
gold/scripts/: seed_odoo.py  setup_odoo.sh  setup_odoo_docker.sh  verify_setup.sh
gold/src/core/: config.py
gold/vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
silver/: .env.example  pyproject.toml  setup_gmail_auth.py  setup_linkedin_session.py
silver/src/: main.py
silver/src/core/: config.py  vault_manager.py
silver/src/utils/: logger.py
silver/src/watchers/: __init__.py  filesystem_watcher.py
silver/vault/: Company_Handbook.md  Dashboard.md
silver/vault/Done/: EMAIL_19cfe48ef600fb55_2026-03-18.md  EMAIL_approval_19cfe48ef600fb55.md  LINKEDIN_POST_approval_20260318_021830.md  LINKEDIN_POST_approval_20260318_025227.md  LINKEDIN_POST_approval_20260318_030358.md
silver/vault/Needs_Action/: LINKEDIN_NOTIF_9b24d43d9e29_2026-03-18.md  LINKEDIN_POST_20260318_021830.md  LINKEDIN_POST_20260318_022624.md  LINKEDIN_POST_20260318_023203.md  LINKEDIN_POST_20260318_025227.md  LINKEDIN_POST_20260318_030358.md
(+868 files in other folders)
